# Redbook_Helper

./: .gitignore  Agent.md  README.md  pyproject.toml  start.bat
app/: db.py  main.py
app/services/: ai_scoring.py  copywriting.py  crawler.py  dedupe.py  scoring.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: index.html
mockups/: video-migration-mock-step2.html  video-migration-mock.html
prompts/: copywriting_prompt.md  generate_prompt.md  image_prompt_templates.md  scoring_prompt.md
scripts/: setup_vendor.ps1
