[project]
name = "redbook-analisyze"
version = "0.1.0"
description = "Local Xiaohongshu competitor analysis and content drafting tool."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "retry>=0.9.2",
    "openpyxl>=3.1.5",
    "PyExecJS>=1.5.1",
]

[tool.uv]
package = false
